[gd_scene load_steps=3 format=3]

[ext_resource type="Script" path="res://scripts/multi_level_menu.gd" id="1_mlmenu"]
[ext_resource type="PackedScene" path="res://scenes/game_manager.tscn" id="2_gmngr"]

[node name="MultiLevelMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1_mlmenu")

[node name="GameManager" parent="." instance=ExtResource("2_gmngr")]

[node name="Background" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.2, 0.3, 0.4, 1)

[node name="Title" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.2
anchor_right = 0.5
anchor_bottom = 0.2
offset_left = -200.0
offset_right = 200.0
offset_bottom = 50.0
text = "多关卡冒险"
alignment = 1

[node name="StartButton" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -25.0
offset_right = 100.0
offset_bottom = 25.0
text = "开始10关卡冒险"

[node name="BackButton" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.6
anchor_right = 0.5
anchor_bottom = 0.6
offset_left = -100.0
offset_top = -25.0
offset_right = 100.0
offset_bottom = 25.0
text = "返回主菜单"

[connection signal="pressed" from="StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="BackButton" to="." method="_on_back_button_pressed"]